// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Edge Provider Schema compiles to Typescript: edge-provider.ts 1`] = `
"// https://www.terraform.io/docs/providers/edge
// generated from terraform resource schema

import { Construct } from 'constructs';
import * as cdktf from 'cdktf';

// Configuration

export interface EdgeProviderConfig {
  /**
  * Docs at Terraform Registry: {@link https://www.terraform.io/docs/providers/edge#optstr EdgeProvider#optstr}
  */
  readonly optstr?: string;
  /**
  * Docs at Terraform Registry: {@link https://www.terraform.io/docs/providers/edge#optnum EdgeProvider#optnum}
  */
  readonly optnum?: number;
  /**
  * Docs at Terraform Registry: {@link https://www.terraform.io/docs/providers/edge#optbool EdgeProvider#optbool}
  */
  readonly optbool?: boolean | cdktf.IResolvable;
  /**
  * Docs at Terraform Registry: {@link https://www.terraform.io/docs/providers/edge#reqstr EdgeProvider#reqstr}
  */
  readonly reqstr: string;
  /**
  * Docs at Terraform Registry: {@link https://www.terraform.io/docs/providers/edge#reqnum EdgeProvider#reqnum}
  */
  readonly reqnum: number;
  /**
  * Docs at Terraform Registry: {@link https://www.terraform.io/docs/providers/edge#reqbool EdgeProvider#reqbool}
  */
  readonly reqbool: boolean | cdktf.IResolvable;
  /**
  * Docs at Terraform Registry: {@link https://www.terraform.io/docs/providers/edge#computedstr EdgeProvider#computedstr}
  */
  readonly computedstr?: string;
  /**
  * Docs at Terraform Registry: {@link https://www.terraform.io/docs/providers/edge#computednum EdgeProvider#computednum}
  */
  readonly computednum?: number;
  /**
  * Docs at Terraform Registry: {@link https://www.terraform.io/docs/providers/edge#computedbool EdgeProvider#computedbool}
  */
  readonly computedbool?: boolean | cdktf.IResolvable;
  /**
  * Alias name
  * 
  * Docs at Terraform Registry: {@link https://www.terraform.io/docs/providers/edge#alias EdgeProvider#alias}
  */
  readonly alias?: string;
}

/**
* Represents a {@link https://www.terraform.io/docs/providers/edge edge}
*/
export class EdgeProvider extends cdktf.TerraformProvider {

  // =================
  // STATIC PROPERTIES
  // =================
  public static readonly tfResourceType: string = \\"edge\\";

  // ===========
  // INITIALIZER
  // ===========

  /**
  * Create a new {@link https://www.terraform.io/docs/providers/edge edge} Resource
  *
  * @param scope The scope in which to define this construct
  * @param id The scoped construct ID. Must be unique amongst siblings in the same scope
  * @param options EdgeProviderConfig
  */
  public constructor(scope: Construct, id: string, config: EdgeProviderConfig) {
    super(scope, id, {
      terraformResourceType: 'edge',
      terraformGeneratorMetadata: {
        providerName: 'edge',
        providerVersionConstraint: 'undefined'
      },
      terraformProviderSource: 'undefined'
    });
    this._optstr = config.optstr;
    this._optnum = config.optnum;
    this._optbool = config.optbool;
    this._reqstr = config.reqstr;
    this._reqnum = config.reqnum;
    this._reqbool = config.reqbool;
    this._computedstr = config.computedstr;
    this._computednum = config.computednum;
    this._computedbool = config.computedbool;
    this._alias = config.alias;
  }

  // ==========
  // ATTRIBUTES
  // ==========

  // optstr - computed: false, optional: true, required: false
  private _optstr?: string; 
  public get optstr() {
    return this._optstr;
  }
  public set optstr(value: string | undefined) {
    this._optstr = value;
  }
  public resetOptstr() {
    this._optstr = undefined;
  }
  // Temporarily expose input value. Use with caution.
  public get optstrInput() {
    return this._optstr;
  }

  // optnum - computed: false, optional: true, required: false
  private _optnum?: number; 
  public get optnum() {
    return this._optnum;
  }
  public set optnum(value: number | undefined) {
    this._optnum = value;
  }
  public resetOptnum() {
    this._optnum = undefined;
  }
  // Temporarily expose input value. Use with caution.
  public get optnumInput() {
    return this._optnum;
  }

  // optbool - computed: false, optional: true, required: false
  private _optbool?: boolean | cdktf.IResolvable; 
  public get optbool() {
    return this._optbool;
  }
  public set optbool(value: boolean | cdktf.IResolvable | undefined) {
    this._optbool = value;
  }
  public resetOptbool() {
    this._optbool = undefined;
  }
  // Temporarily expose input value. Use with caution.
  public get optboolInput() {
    return this._optbool;
  }

  // reqstr - computed: false, optional: false, required: true
  private _reqstr?: string; 
  public get reqstr() {
    return this._reqstr;
  }
  public set reqstr(value: string | undefined) {
    this._reqstr = value;
  }
  // Temporarily expose input value. Use with caution.
  public get reqstrInput() {
    return this._reqstr;
  }

  // reqnum - computed: false, optional: false, required: true
  private _reqnum?: number; 
  public get reqnum() {
    return this._reqnum;
  }
  public set reqnum(value: number | undefined) {
    this._reqnum = value;
  }
  // Temporarily expose input value. Use with caution.
  public get reqnumInput() {
    return this._reqnum;
  }

  // reqbool - computed: false, optional: false, required: true
  private _reqbool?: boolean | cdktf.IResolvable; 
  public get reqbool() {
    return this._reqbool;
  }
  public set reqbool(value: boolean | cdktf.IResolvable | undefined) {
    this._reqbool = value;
  }
  // Temporarily expose input value. Use with caution.
  public get reqboolInput() {
    return this._reqbool;
  }

  // computedstr - computed: true, optional: true, required: false
  private _computedstr?: string; 
  public get computedstr() {
    return this._computedstr;
  }
  public set computedstr(value: string | undefined) {
    this._computedstr = value;
  }
  public resetComputedstr() {
    this._computedstr = undefined;
  }
  // Temporarily expose input value. Use with caution.
  public get computedstrInput() {
    return this._computedstr;
  }

  // computednum - computed: true, optional: true, required: false
  private _computednum?: number; 
  public get computednum() {
    return this._computednum;
  }
  public set computednum(value: number | undefined) {
    this._computednum = value;
  }
  public resetComputednum() {
    this._computednum = undefined;
  }
  // Temporarily expose input value. Use with caution.
  public get computednumInput() {
    return this._computednum;
  }

  // computedbool - computed: true, optional: true, required: false
  private _computedbool?: boolean | cdktf.IResolvable; 
  public get computedbool() {
    return this._computedbool;
  }
  public set computedbool(value: boolean | cdktf.IResolvable | undefined) {
    this._computedbool = value;
  }
  public resetComputedbool() {
    this._computedbool = undefined;
  }
  // Temporarily expose input value. Use with caution.
  public get computedboolInput() {
    return this._computedbool;
  }

  // alias - computed: false, optional: true, required: false
  private _alias?: string; 
  public get alias() {
    return this._alias;
  }
  public set alias(value: string | undefined) {
    this._alias = value;
  }
  public resetAlias() {
    this._alias = undefined;
  }
  // Temporarily expose input value. Use with caution.
  public get aliasInput() {
    return this._alias;
  }

  // =========
  // SYNTHESIS
  // =========

  protected synthesizeAttributes(): { [name: string]: any } {
    return {
      optstr: cdktf.stringToTerraform(this._optstr),
      optnum: cdktf.numberToTerraform(this._optnum),
      optbool: cdktf.booleanToTerraform(this._optbool),
      reqstr: cdktf.stringToTerraform(this._reqstr),
      reqnum: cdktf.numberToTerraform(this._reqnum),
      reqbool: cdktf.booleanToTerraform(this._reqbool),
      computedstr: cdktf.stringToTerraform(this._computedstr),
      computednum: cdktf.numberToTerraform(this._computednum),
      computedbool: cdktf.booleanToTerraform(this._computedbool),
      alias: cdktf.stringToTerraform(this._alias),
    };
  }
}
"
`;

exports[`Edge Provider Schema compiles to Typescript: index.ts 1`] = `
"// generated by cdktf get
export * from './required-attribute-resource';
export * from './optional-attribute-resource';
export * from './optional-computed-attribute-resource';
export * from './list-block-resource';
export * from './map-resource';
export * from './set-block-resource';
export * from './edge-provider';

"
`;

exports[`Edge Provider Schema compiles to Typescript: list-block-resource.ts 1`] = `
"// https://www.terraform.io/docs/providers/edge/r/list_block_resource
// generated from terraform resource schema

import { Construct } from 'constructs';
import * as cdktf from 'cdktf';

// Configuration

export interface ListBlockResourceConfig extends cdktf.TerraformMetaArguments {
  /**
  * opt block
  * 
  * Docs at Terraform Registry: {@link https://www.terraform.io/docs/providers/edge/r/list_block_resource#opt ListBlockResource#opt}
  */
  readonly opt?: ListBlockResourceOpt[] | cdktf.IResolvable;
  /**
  * req block
  * 
  * Docs at Terraform Registry: {@link https://www.terraform.io/docs/providers/edge/r/list_block_resource#req ListBlockResource#req}
  */
  readonly req: ListBlockResourceReq[] | cdktf.IResolvable;
  /**
  * singleopt block
  * 
  * Docs at Terraform Registry: {@link https://www.terraform.io/docs/providers/edge/r/list_block_resource#singleopt ListBlockResource#singleopt}
  */
  readonly singleopt?: ListBlockResourceSingleopt;
  /**
  * singlereq block
  * 
  * Docs at Terraform Registry: {@link https://www.terraform.io/docs/providers/edge/r/list_block_resource#singlereq ListBlockResource#singlereq}
  */
  readonly singlereq: ListBlockResourceSinglereq;
  /**
  * singleComputedBlock block
  * 
  * Docs at Terraform Registry: {@link https://www.terraform.io/docs/providers/edge/r/list_block_resource#singleComputedBlock ListBlockResource#singleComputedBlock}
  */
  readonly singleComputedBlock?: ListBlockResourceSingleComputedBlock;
}
export interface ListBlockResourceOpt {
  /**
  * Docs at Terraform Registry: {@link https://www.terraform.io/docs/providers/edge/r/list_block_resource#optstr ListBlockResource#optstr}
  */
  readonly optstr?: string;
  /**
  * Docs at Terraform Registry: {@link https://www.terraform.io/docs/providers/edge/r/list_block_resource#optnum ListBlockResource#optnum}
  */
  readonly optnum?: number;
  /**
  * Docs at Terraform Registry: {@link https://www.terraform.io/docs/providers/edge/r/list_block_resource#optbool ListBlockResource#optbool}
  */
  readonly optbool?: boolean | cdktf.IResolvable;
  /**
  * Docs at Terraform Registry: {@link https://www.terraform.io/docs/providers/edge/r/list_block_resource#reqstr ListBlockResource#reqstr}
  */
  readonly reqstr: string;
  /**
  * Docs at Terraform Registry: {@link https://www.terraform.io/docs/providers/edge/r/list_block_resource#reqnum ListBlockResource#reqnum}
  */
  readonly reqnum: number;
  /**
  * Docs at Terraform Registry: {@link https://www.terraform.io/docs/providers/edge/r/list_block_resource#reqbool ListBlockResource#reqbool}
  */
  readonly reqbool: boolean | cdktf.IResolvable;
  /**
  * Docs at Terraform Registry: {@link https://www.terraform.io/docs/providers/edge/r/list_block_resource#computedstr ListBlockResource#computedstr}
  */
  readonly computedstr?: string;
  /**
  * Docs at Terraform Registry: {@link https://www.terraform.io/docs/providers/edge/r/list_block_resource#computednum ListBlockResource#computednum}
  */
  readonly computednum?: number;
  /**
  * Docs at Terraform Registry: {@link https://www.terraform.io/docs/providers/edge/r/list_block_resource#computedbool ListBlockResource#computedbool}
  */
  readonly computedbool?: boolean | cdktf.IResolvable;
}

export function listBlockResourceOptToTerraform(struct?: ListBlockResourceOpt | cdktf.IResolvable): any {
  if (!cdktf.canInspect(struct) || cdktf.Tokenization.isResolvable(struct)) { return struct; }
  if (cdktf.isComplexElement(struct)) {
    throw new Error(\\"A complex element was used as configuration, this is not supported: https://cdk.tf/complex-object-as-configuration\\");
  }
  return {
    optstr: cdktf.stringToTerraform(struct!.optstr),
    optnum: cdktf.numberToTerraform(struct!.optnum),
    optbool: cdktf.booleanToTerraform(struct!.optbool),
    reqstr: cdktf.stringToTerraform(struct!.reqstr),
    reqnum: cdktf.numberToTerraform(struct!.reqnum),
    reqbool: cdktf.booleanToTerraform(struct!.reqbool),
    computedstr: cdktf.stringToTerraform(struct!.computedstr),
    computednum: cdktf.numberToTerraform(struct!.computednum),
    computedbool: cdktf.booleanToTerraform(struct!.computedbool),
  }
}

export interface ListBlockResourceReq {
  /**
  * Docs at Terraform Registry: {@link https://www.terraform.io/docs/providers/edge/r/list_block_resource#optstr ListBlockResource#optstr}
  */
  readonly optstr?: string;
  /**
  * Docs at Terraform Registry: {@link https://www.terraform.io/docs/providers/edge/r/list_block_resource#optnum ListBlockResource#optnum}
  */
  readonly optnum?: number;
  /**
  * Docs at Terraform Registry: {@link https://www.terraform.io/docs/providers/edge/r/list_block_resource#optbool ListBlockResource#optbool}
  */
  readonly optbool?: boolean | cdktf.IResolvable;
  /**
  * Docs at Terraform Registry: {@link https://www.terraform.io/docs/providers/edge/r/list_block_resource#reqstr ListBlockResource#reqstr}
  */
  readonly reqstr: string;
  /**
  * Docs at Terraform Registry: {@link https://www.terraform.io/docs/providers/edge/r/list_block_resource#reqnum ListBlockResource#reqnum}
  */
  readonly reqnum: number;
  /**
  * Docs at Terraform Registry: {@link https://www.terraform.io/docs/providers/edge/r/list_block_resource#reqbool ListBlockResource#reqbool}
  */
  readonly reqbool: boolean | cdktf.IResolvable;
  /**
  * Docs at Terraform Registry: {@link https://www.terraform.io/docs/providers/edge/r/list_block_resource#computedstr ListBlockResource#computedstr}
  */
  readonly computedstr?: string;
  /**
  * Docs at Terraform Registry: {@link https://www.terraform.io/docs/providers/edge/r/list_block_resource#computednum ListBlockResource#computednum}
  */
  readonly computednum?: number;
  /**
  * Docs at Terraform Registry: {@link https://www.terraform.io/docs/providers/edge/r/list_block_resource#computedbool ListBlockResource#computedbool}
  */
  readonly computedbool?: boolean | cdktf.IResolvable;
}

export function listBlockResourceReqToTerraform(struct?: ListBlockResourceReq | cdktf.IResolvable): any {
  if (!cdktf.canInspect(struct) || cdktf.Tokenization.isResolvable(struct)) { return struct; }
  if (cdktf.isComplexElement(struct)) {
    throw new Error(\\"A complex element was used as configuration, this is not supported: https://cdk.tf/complex-object-as-configuration\\");
  }
  return {
    optstr: cdktf.stringToTerraform(struct!.optstr),
    optnum: cdktf.numberToTerraform(struct!.optnum),
    optbool: cdktf.booleanToTerraform(struct!.optbool),
    reqstr: cdktf.stringToTerraform(struct!.reqstr),
    reqnum: cdktf.numberToTerraform(struct!.reqnum),
    reqbool: cdktf.booleanToTerraform(struct!.reqbool),
    computedstr: cdktf.stringToTerraform(struct!.computedstr),
    computednum: cdktf.numberToTerraform(struct!.computednum),
    computedbool: cdktf.booleanToTerraform(struct!.computedbool),
  }
}

export interface ListBlockResourceSingleopt {
  /**
  * Docs at Terraform Registry: {@link https://www.terraform.io/docs/providers/edge/r/list_block_resource#optstr ListBlockResource#optstr}
  */
  readonly optstr?: string;
  /**
  * Docs at Terraform Registry: {@link https://www.terraform.io/docs/providers/edge/r/list_block_resource#optnum ListBlockResource#optnum}
  */
  readonly optnum?: number;
  /**
  * Docs at Terraform Registry: {@link https://www.terraform.io/docs/providers/edge/r/list_block_resource#optbool ListBlockResource#optbool}
  */
  readonly optbool?: boolean | cdktf.IResolvable;
  /**
  * Docs at Terraform Registry: {@link https://www.terraform.io/docs/providers/edge/r/list_block_resource#reqstr ListBlockResource#reqstr}
  */
  readonly reqstr: string;
  /**
  * Docs at Terraform Registry: {@link https://www.terraform.io/docs/providers/edge/r/list_block_resource#reqnum ListBlockResource#reqnum}
  */
  readonly reqnum: number;
  /**
  * Docs at Terraform Registry: {@link https://www.terraform.io/docs/providers/edge/r/list_block_resource#reqbool ListBlockResource#reqbool}
  */
  readonly reqbool: boolean | cdktf.IResolvable;
  /**
  * Docs at Terraform Registry: {@link https://www.terraform.io/docs/providers/edge/r/list_block_resource#computedstr ListBlockResource#computedstr}
  */
  readonly computedstr?: string;
  /**
  * Docs at Terraform Registry: {@link https://www.terraform.io/docs/providers/edge/r/list_block_resource#computednum ListBlockResource#computednum}
  */
  readonly computednum?: number;
  /**
  * Docs at Terraform Registry: {@link https://www.terraform.io/docs/providers/edge/r/list_block_resource#computedbool ListBlockResource#computedbool}
  */
  readonly computedbool?: boolean | cdktf.IResolvable;
}

export function listBlockResourceSingleoptToTerraform(struct?: ListBlockResourceSingleoptOutputReference | ListBlockResourceSingleopt): any {
  if (!cdktf.canInspect(struct) || cdktf.Tokenization.isResolvable(struct)) { return struct; }
  if (cdktf.isComplexElement(struct)) {
    throw new Error(\\"A complex element was used as configuration, this is not supported: https://cdk.tf/complex-object-as-configuration\\");
  }
  return {
    optstr: cdktf.stringToTerraform(struct!.optstr),
    optnum: cdktf.numberToTerraform(struct!.optnum),
    optbool: cdktf.booleanToTerraform(struct!.optbool),
    reqstr: cdktf.stringToTerraform(struct!.reqstr),
    reqnum: cdktf.numberToTerraform(struct!.reqnum),
    reqbool: cdktf.booleanToTerraform(struct!.reqbool),
    computedstr: cdktf.stringToTerraform(struct!.computedstr),
    computednum: cdktf.numberToTerraform(struct!.computednum),
    computedbool: cdktf.booleanToTerraform(struct!.computedbool),
  }
}

export class ListBlockResourceSingleoptOutputReference extends cdktf.ComplexObject {
  private isEmptyObject = false;

  /**
  * @param terraformResource The parent resource
  * @param terraformAttribute The attribute on the parent resource this class is referencing
  * @param isSingleItem True if this is a block, false if it's a list
  */
  public constructor(terraformResource: cdktf.IInterpolatingParent, terraformAttribute: string, isSingleItem: boolean) {
    super(terraformResource, terraformAttribute, isSingleItem);
  }

  public get internalValue(): ListBlockResourceSingleopt | undefined {
    let hasAnyValues = this.isEmptyObject;
    const internalValueResult: any = {};
    if (this._optstr !== undefined) {
      hasAnyValues = true;
      internalValueResult.optstr = this._optstr;
    }
    if (this._optnum !== undefined) {
      hasAnyValues = true;
      internalValueResult.optnum = this._optnum;
    }
    if (this._optbool !== undefined) {
      hasAnyValues = true;
      internalValueResult.optbool = this._optbool;
    }
    if (this._reqstr !== undefined) {
      hasAnyValues = true;
      internalValueResult.reqstr = this._reqstr;
    }
    if (this._reqnum !== undefined) {
      hasAnyValues = true;
      internalValueResult.reqnum = this._reqnum;
    }
    if (this._reqbool !== undefined) {
      hasAnyValues = true;
      internalValueResult.reqbool = this._reqbool;
    }
    if (this._computedstr !== undefined) {
      hasAnyValues = true;
      internalValueResult.computedstr = this._computedstr;
    }
    if (this._computednum !== undefined) {
      hasAnyValues = true;
      internalValueResult.computednum = this._computednum;
    }
    if (this._computedbool !== undefined) {
      hasAnyValues = true;
      internalValueResult.computedbool = this._computedbool;
    }
    return hasAnyValues ? internalValueResult : undefined;
  }

  public set internalValue(value: ListBlockResourceSingleopt | undefined) {
    if (value === undefined) {
      this.isEmptyObject = false;
      this._optstr = undefined;
      this._optnum = undefined;
      this._optbool = undefined;
      this._reqstr = undefined;
      this._reqnum = undefined;
      this._reqbool = undefined;
      this._computedstr = undefined;
      this._computednum = undefined;
      this._computedbool = undefined;
    }
    else {
      this.isEmptyObject = Object.keys(value).length === 0;
      this._optstr = value.optstr;
      this._optnum = value.optnum;
      this._optbool = value.optbool;
      this._reqstr = value.reqstr;
      this._reqnum = value.reqnum;
      this._reqbool = value.reqbool;
      this._computedstr = value.computedstr;
      this._computednum = value.computednum;
      this._computedbool = value.computedbool;
    }
  }

  // optstr - computed: false, optional: true, required: false
  private _optstr?: string; 
  public get optstr() {
    return this.getStringAttribute('optstr');
  }
  public set optstr(value: string) {
    this._optstr = value;
  }
  public resetOptstr() {
    this._optstr = undefined;
  }
  // Temporarily expose input value. Use with caution.
  public get optstrInput() {
    return this._optstr;
  }

  // optnum - computed: false, optional: true, required: false
  private _optnum?: number; 
  public get optnum() {
    return this.getNumberAttribute('optnum');
  }
  public set optnum(value: number) {
    this._optnum = value;
  }
  public resetOptnum() {
    this._optnum = undefined;
  }
  // Temporarily expose input value. Use with caution.
  public get optnumInput() {
    return this._optnum;
  }

  // optbool - computed: false, optional: true, required: false
  private _optbool?: boolean | cdktf.IResolvable; 
  public get optbool() {
    return this.getBooleanAttribute('optbool');
  }
  public set optbool(value: boolean | cdktf.IResolvable) {
    this._optbool = value;
  }
  public resetOptbool() {
    this._optbool = undefined;
  }
  // Temporarily expose input value. Use with caution.
  public get optboolInput() {
    return this._optbool;
  }

  // reqstr - computed: false, optional: false, required: true
  private _reqstr?: string; 
  public get reqstr() {
    return this.getStringAttribute('reqstr');
  }
  public set reqstr(value: string) {
    this._reqstr = value;
  }
  // Temporarily expose input value. Use with caution.
  public get reqstrInput() {
    return this._reqstr;
  }

  // reqnum - computed: false, optional: false, required: true
  private _reqnum?: number; 
  public get reqnum() {
    return this.getNumberAttribute('reqnum');
  }
  public set reqnum(value: number) {
    this._reqnum = value;
  }
  // Temporarily expose input value. Use with caution.
  public get reqnumInput() {
    return this._reqnum;
  }

  // reqbool - computed: false, optional: false, required: true
  private _reqbool?: boolean | cdktf.IResolvable; 
  public get reqbool() {
    return this.getBooleanAttribute('reqbool');
  }
  public set reqbool(value: boolean | cdktf.IResolvable) {
    this._reqbool = value;
  }
  // Temporarily expose input value. Use with caution.
  public get reqboolInput() {
    return this._reqbool;
  }

  // computedstr - computed: true, optional: true, required: false
  private _computedstr?: string; 
  public get computedstr() {
    return this.getStringAttribute('computedstr');
  }
  public set computedstr(value: string) {
    this._computedstr = value;
  }
  public resetComputedstr() {
    this._computedstr = undefined;
  }
  // Temporarily expose input value. Use with caution.
  public get computedstrInput() {
    return this._computedstr;
  }

  // computednum - computed: true, optional: true, required: false
  private _computednum?: number; 
  public get computednum() {
    return this.getNumberAttribute('computednum');
  }
  public set computednum(value: number) {
    this._computednum = value;
  }
  public resetComputednum() {
    this._computednum = undefined;
  }
  // Temporarily expose input value. Use with caution.
  public get computednumInput() {
    return this._computednum;
  }

  // computedbool - computed: true, optional: true, required: false
  private _computedbool?: boolean | cdktf.IResolvable; 
  public get computedbool() {
    return this.getBooleanAttribute('computedbool');
  }
  public set computedbool(value: boolean | cdktf.IResolvable) {
    this._computedbool = value;
  }
  public resetComputedbool() {
    this._computedbool = undefined;
  }
  // Temporarily expose input value. Use with caution.
  public get computedboolInput() {
    return this._computedbool;
  }
}
export interface ListBlockResourceSinglereq {
  /**
  * Docs at Terraform Registry: {@link https://www.terraform.io/docs/providers/edge/r/list_block_resource#optstr ListBlockResource#optstr}
  */
  readonly optstr?: string;
  /**
  * Docs at Terraform Registry: {@link https://www.terraform.io/docs/providers/edge/r/list_block_resource#optnum ListBlockResource#optnum}
  */
  readonly optnum?: number;
  /**
  * Docs at Terraform Registry: {@link https://www.terraform.io/docs/providers/edge/r/list_block_resource#optbool ListBlockResource#optbool}
  */
  readonly optbool?: boolean | cdktf.IResolvable;
  /**
  * Docs at Terraform Registry: {@link https://www.terraform.io/docs/providers/edge/r/list_block_resource#reqstr ListBlockResource#reqstr}
  */
  readonly reqstr: string;
  /**
  * Docs at Terraform Registry: {@link https://www.terraform.io/docs/providers/edge/r/list_block_resource#reqnum ListBlockResource#reqnum}
  */
  readonly reqnum: number;
  /**
  * Docs at Terraform Registry: {@link https://www.terraform.io/docs/providers/edge/r/list_block_resource#reqbool ListBlockResource#reqbool}
  */
  readonly reqbool: boolean | cdktf.IResolvable;
  /**
  * Docs at Terraform Registry: {@link https://www.terraform.io/docs/providers/edge/r/list_block_resource#computedstr ListBlockResource#computedstr}
  */
  readonly computedstr?: string;
  /**
  * Docs at Terraform Registry: {@link https://www.terraform.io/docs/providers/edge/r/list_block_resource#computednum ListBlockResource#computednum}
  */
  readonly computednum?: number;
  /**
  * Docs at Terraform Registry: {@link https://www.terraform.io/docs/providers/edge/r/list_block_resource#computedbool ListBlockResource#computedbool}
  */
  readonly computedbool?: boolean | cdktf.IResolvable;
}

export function listBlockResourceSinglereqToTerraform(struct?: ListBlockResourceSinglereqOutputReference | ListBlockResourceSinglereq): any {
  if (!cdktf.canInspect(struct) || cdktf.Tokenization.isResolvable(struct)) { return struct; }
  if (cdktf.isComplexElement(struct)) {
    throw new Error(\\"A complex element was used as configuration, this is not supported: https://cdk.tf/complex-object-as-configuration\\");
  }
  return {
    optstr: cdktf.stringToTerraform(struct!.optstr),
    optnum: cdktf.numberToTerraform(struct!.optnum),
    optbool: cdktf.booleanToTerraform(struct!.optbool),
    reqstr: cdktf.stringToTerraform(struct!.reqstr),
    reqnum: cdktf.numberToTerraform(struct!.reqnum),
    reqbool: cdktf.booleanToTerraform(struct!.reqbool),
    computedstr: cdktf.stringToTerraform(struct!.computedstr),
    computednum: cdktf.numberToTerraform(struct!.computednum),
    computedbool: cdktf.booleanToTerraform(struct!.computedbool),
  }
}

export class ListBlockResourceSinglereqOutputReference extends cdktf.ComplexObject {
  private isEmptyObject = false;

  /**
  * @param terraformResource The parent resource
  * @param terraformAttribute The attribute on the parent resource this class is referencing
  * @param isSingleItem True if this is a block, false if it's a list
  */
  public constructor(terraformResource: cdktf.IInterpolatingParent, terraformAttribute: string, isSingleItem: boolean) {
    super(terraformResource, terraformAttribute, isSingleItem);
  }

  public get internalValue(): ListBlockResourceSinglereq | undefined {
    let hasAnyValues = this.isEmptyObject;
    const internalValueResult: any = {};
    if (this._optstr !== undefined) {
      hasAnyValues = true;
      internalValueResult.optstr = this._optstr;
    }
    if (this._optnum !== undefined) {
      hasAnyValues = true;
      internalValueResult.optnum = this._optnum;
    }
    if (this._optbool !== undefined) {
      hasAnyValues = true;
      internalValueResult.optbool = this._optbool;
    }
    if (this._reqstr !== undefined) {
      hasAnyValues = true;
      internalValueResult.reqstr = this._reqstr;
    }
    if (this._reqnum !== undefined) {
      hasAnyValues = true;
      internalValueResult.reqnum = this._reqnum;
    }
    if (this._reqbool !== undefined) {
      hasAnyValues = true;
      internalValueResult.reqbool = this._reqbool;
    }
    if (this._computedstr !== undefined) {
      hasAnyValues = true;
      internalValueResult.computedstr = this._computedstr;
    }
    if (this._computednum !== undefined) {
      hasAnyValues = true;
      internalValueResult.computednum = this._computednum;
    }
    if (this._computedbool !== undefined) {
      hasAnyValues = true;
      internalValueResult.computedbool = this._computedbool;
    }
    return hasAnyValues ? internalValueResult : undefined;
  }

  public set internalValue(value: ListBlockResourceSinglereq | undefined) {
    if (value === undefined) {
      this.isEmptyObject = false;
      this._optstr = undefined;
      this._optnum = undefined;
      this._optbool = undefined;
      this._reqstr = undefined;
      this._reqnum = undefined;
      this._reqbool = undefined;
      this._computedstr = undefined;
      this._computednum = undefined;
      this._computedbool = undefined;
    }
    else {
      this.isEmptyObject = Object.keys(value).length === 0;
      this._optstr = value.optstr;
      this._optnum = value.optnum;
      this._optbool = value.optbool;
      this._reqstr = value.reqstr;
      this._reqnum = value.reqnum;
      this._reqbool = value.reqbool;
      this._computedstr = value.computedstr;
      this._computednum = value.computednum;
      this._computedbool = value.computedbool;
    }
  }

  // optstr - computed: false, optional: true, required: false
  private _optstr?: string; 
  public get optstr() {
    return this.getStringAttribute('optstr');
  }
  public set optstr(value: string) {
    this._optstr = value;
  }
  public resetOptstr() {
    this._optstr = undefined;
  }
  // Temporarily expose input value. Use with caution.
  public get optstrInput() {
    return this._optstr;
  }

  // optnum - computed: false, optional: true, required: false
  private _optnum?: number; 
  public get optnum() {
    return this.getNumberAttribute('optnum');
  }
  public set optnum(value: number) {
    this._optnum = value;
  }
  public resetOptnum() {
    this._optnum = undefined;
  }
  // Temporarily expose input value. Use with caution.
  public get optnumInput() {
    return this._optnum;
  }

  // optbool - computed: false, optional: true, required: false
  private _optbool?: boolean | cdktf.IResolvable; 
  public get optbool() {
    return this.getBooleanAttribute('optbool');
  }
  public set optbool(value: boolean | cdktf.IResolvable) {
    this._optbool = value;
  }
  public resetOptbool() {
    this._optbool = undefined;
  }
  // Temporarily expose input value. Use with caution.
  public get optboolInput() {
    return this._optbool;
  }

  // reqstr - computed: false, optional: false, required: true
  private _reqstr?: string; 
  public get reqstr() {
    return this.getStringAttribute('reqstr');
  }
  public set reqstr(value: string) {
    this._reqstr = value;
  }
  // Temporarily expose input value. Use with caution.
  public get reqstrInput() {
    return this._reqstr;
  }

  // reqnum - computed: false, optional: false, required: true
  private _reqnum?: number; 
  public get reqnum() {
    return this.getNumberAttribute('reqnum');
  }
  public set reqnum(value: number) {
    this._reqnum = value;
  }
  // Temporarily expose input value. Use with caution.
  public get reqnumInput() {
    return this._reqnum;
  }

  // reqbool - computed: false, optional: false, required: true
  private _reqbool?: boolean | cdktf.IResolvable; 
  public get reqbool() {
    return this.getBooleanAttribute('reqbool');
  }
  public set reqbool(value: boolean | cdktf.IResolvable) {
    this._reqbool = value;
  }
  // Temporarily expose input value. Use with caution.
  public get reqboolInput() {
    return this._reqbool;
  }

  // computedstr - computed: true, optional: true, required: false
  private _computedstr?: string; 
  public get computedstr() {
    return this.getStringAttribute('computedstr');
  }
  public set computedstr(value: string) {
    this._computedstr = value;
  }
  public resetComputedstr() {
    this._computedstr = undefined;
  }
  // Temporarily expose input value. Use with caution.
  public get computedstrInput() {
    return this._computedstr;
  }

  // computednum - computed: true, optional: true, required: false
  private _computednum?: number; 
  public get computednum() {
    return this.getNumberAttribute('computednum');
  }
  public set computednum(value: number) {
    this._computednum = value;
  }
  public resetComputednum() {
    this._computednum = undefined;
  }
  // Temporarily expose input value. Use with caution.
  public get computednumInput() {
    return this._computednum;
  }

  // computedbool - computed: true, optional: true, required: false
  private _computedbool?: boolean | cdktf.IResolvable; 
  public get computedbool() {
    return this.getBooleanAttribute('computedbool');
  }
  public set computedbool(value: boolean | cdktf.IResolvable) {
    this._computedbool = value;
  }
  public resetComputedbool() {
    this._computedbool = undefined;
  }
  // Temporarily expose input value. Use with caution.
  public get computedboolInput() {
    return this._computedbool;
  }
}
export interface ListBlockResourceSingleComputedBlock {
  /**
  * Docs at Terraform Registry: {@link https://www.terraform.io/docs/providers/edge/r/list_block_resource#configured ListBlockResource#configured}
  */
  readonly configured?: string;
}

export function listBlockResourceSingleComputedBlockToTerraform(struct?: ListBlockResourceSingleComputedBlockOutputReference | ListBlockResourceSingleComputedBlock): any {
  if (!cdktf.canInspect(struct) || cdktf.Tokenization.isResolvable(struct)) { return struct; }
  if (cdktf.isComplexElement(struct)) {
    throw new Error(\\"A complex element was used as configuration, this is not supported: https://cdk.tf/complex-object-as-configuration\\");
  }
  return {
    configured: cdktf.stringToTerraform(struct!.configured),
  }
}

export class ListBlockResourceSingleComputedBlockOutputReference extends cdktf.ComplexObject {
  private isEmptyObject = false;

  /**
  * @param terraformResource The parent resource
  * @param terraformAttribute The attribute on the parent resource this class is referencing
  * @param isSingleItem True if this is a block, false if it's a list
  */
  public constructor(terraformResource: cdktf.IInterpolatingParent, terraformAttribute: string, isSingleItem: boolean) {
    super(terraformResource, terraformAttribute, isSingleItem);
  }

  public get internalValue(): ListBlockResourceSingleComputedBlock | undefined {
    let hasAnyValues = this.isEmptyObject;
    const internalValueResult: any = {};
    if (this._configured !== undefined) {
      hasAnyValues = true;
      internalValueResult.configured = this._configured;
    }
    return hasAnyValues ? internalValueResult : undefined;
  }

  public set internalValue(value: ListBlockResourceSingleComputedBlock | undefined) {
    if (value === undefined) {
      this.isEmptyObject = false;
      this._configured = undefined;
    }
    else {
      this.isEmptyObject = Object.keys(value).length === 0;
      this._configured = value.configured;
    }
  }

  // computed - computed: true, optional: false, required: false
  public get computed() {
    return this.getStringAttribute('computed');
  }

  // configured - computed: false, optional: true, required: false
  private _configured?: string; 
  public get configured() {
    return this.getStringAttribute('configured');
  }
  public set configured(value: string) {
    this._configured = value;
  }
  public resetConfigured() {
    this._configured = undefined;
  }
  // Temporarily expose input value. Use with caution.
  public get configuredInput() {
    return this._configured;
  }
}

/**
* Represents a {@link https://www.terraform.io/docs/providers/edge/r/list_block_resource list_block_resource}
*/
export class ListBlockResource extends cdktf.TerraformResource {

  // =================
  // STATIC PROPERTIES
  // =================
  public static readonly tfResourceType: string = \\"list_block_resource\\";

  // ===========
  // INITIALIZER
  // ===========

  /**
  * Create a new {@link https://www.terraform.io/docs/providers/edge/r/list_block_resource list_block_resource} Resource
  *
  * @param scope The scope in which to define this construct
  * @param id The scoped construct ID. Must be unique amongst siblings in the same scope
  * @param options ListBlockResourceConfig
  */
  public constructor(scope: Construct, id: string, config: ListBlockResourceConfig) {
    super(scope, id, {
      terraformResourceType: 'list_block_resource',
      terraformGeneratorMetadata: {
        providerName: 'edge'
      },
      provider: config.provider,
      dependsOn: config.dependsOn,
      count: config.count,
      lifecycle: config.lifecycle
    });
    this._opt = config.opt;
    this._req = config.req;
    this._singleopt.internalValue = config.singleopt;
    this._singlereq.internalValue = config.singlereq;
    this._singleComputedBlock.internalValue = config.singleComputedBlock;
  }

  // ==========
  // ATTRIBUTES
  // ==========

  // opt - computed: false, optional: true, required: false
  private _opt?: ListBlockResourceOpt[] | cdktf.IResolvable; 
  public get opt() {
    // Getting the computed value is not yet implemented
    return this.interpolationForAttribute('opt');
  }
  public set opt(value: ListBlockResourceOpt[] | cdktf.IResolvable) {
    this._opt = value;
  }
  public resetOpt() {
    this._opt = undefined;
  }
  // Temporarily expose input value. Use with caution.
  public get optInput() {
    return this._opt;
  }

  // req - computed: false, optional: false, required: true
  private _req?: ListBlockResourceReq[] | cdktf.IResolvable; 
  public get req() {
    // Getting the computed value is not yet implemented
    return this.interpolationForAttribute('req');
  }
  public set req(value: ListBlockResourceReq[] | cdktf.IResolvable) {
    this._req = value;
  }
  // Temporarily expose input value. Use with caution.
  public get reqInput() {
    return this._req;
  }

  // singleopt - computed: false, optional: true, required: false
  private _singleopt = new ListBlockResourceSingleoptOutputReference(this, \\"singleopt\\", true);
  public get singleopt() {
    return this._singleopt;
  }
  public putSingleopt(value: ListBlockResourceSingleopt) {
    this._singleopt.internalValue = value;
  }
  public resetSingleopt() {
    this._singleopt.internalValue = undefined;
  }
  // Temporarily expose input value. Use with caution.
  public get singleoptInput() {
    return this._singleopt.internalValue;
  }

  // singlereq - computed: false, optional: false, required: true
  private _singlereq = new ListBlockResourceSinglereqOutputReference(this, \\"singlereq\\", true);
  public get singlereq() {
    return this._singlereq;
  }
  public putSinglereq(value: ListBlockResourceSinglereq) {
    this._singlereq.internalValue = value;
  }
  // Temporarily expose input value. Use with caution.
  public get singlereqInput() {
    return this._singlereq.internalValue;
  }

  // singleComputedBlock - computed: false, optional: true, required: false
  private _singleComputedBlock = new ListBlockResourceSingleComputedBlockOutputReference(this, \\"singleComputedBlock\\", true);
  public get singleComputedBlock() {
    return this._singleComputedBlock;
  }
  public putSingleComputedBlock(value: ListBlockResourceSingleComputedBlock) {
    this._singleComputedBlock.internalValue = value;
  }
  public resetSingleComputedBlock() {
    this._singleComputedBlock.internalValue = undefined;
  }
  // Temporarily expose input value. Use with caution.
  public get singleComputedBlockInput() {
    return this._singleComputedBlock.internalValue;
  }

  // =========
  // SYNTHESIS
  // =========

  protected synthesizeAttributes(): { [name: string]: any } {
    return {
      opt: cdktf.listMapper(listBlockResourceOptToTerraform)(this._opt),
      req: cdktf.listMapper(listBlockResourceReqToTerraform)(this._req),
      singleopt: listBlockResourceSingleoptToTerraform(this._singleopt.internalValue),
      singlereq: listBlockResourceSinglereqToTerraform(this._singlereq.internalValue),
      singleComputedBlock: listBlockResourceSingleComputedBlockToTerraform(this._singleComputedBlock.internalValue),
    };
  }
}
"
`;

exports[`Edge Provider Schema compiles to Typescript: map-resource.ts 1`] = `
"// https://www.terraform.io/docs/providers/edge/r/map_resource
// generated from terraform resource schema

import { Construct } from 'constructs';
import * as cdktf from 'cdktf';

// Configuration

export interface MapResourceConfig extends cdktf.TerraformMetaArguments {
  /**
  * Docs at Terraform Registry: {@link https://www.terraform.io/docs/providers/edge/r/map_resource#optMap MapResource#optMap}
  */
  readonly optMap?: { [key: string]: string };
  /**
  * Docs at Terraform Registry: {@link https://www.terraform.io/docs/providers/edge/r/map_resource#reqMap MapResource#reqMap}
  */
  readonly reqMap: { [key: string]: (boolean | cdktf.IResolvable) };
  /**
  * Docs at Terraform Registry: {@link https://www.terraform.io/docs/providers/edge/r/map_resource#computedMap MapResource#computedMap}
  */
  readonly computedMap?: { [key: string]: number };
}

/**
* Represents a {@link https://www.terraform.io/docs/providers/edge/r/map_resource map_resource}
*/
export class MapResource extends cdktf.TerraformResource {

  // =================
  // STATIC PROPERTIES
  // =================
  public static readonly tfResourceType: string = \\"map_resource\\";

  // ===========
  // INITIALIZER
  // ===========

  /**
  * Create a new {@link https://www.terraform.io/docs/providers/edge/r/map_resource map_resource} Resource
  *
  * @param scope The scope in which to define this construct
  * @param id The scoped construct ID. Must be unique amongst siblings in the same scope
  * @param options MapResourceConfig
  */
  public constructor(scope: Construct, id: string, config: MapResourceConfig) {
    super(scope, id, {
      terraformResourceType: 'map_resource',
      terraformGeneratorMetadata: {
        providerName: 'edge'
      },
      provider: config.provider,
      dependsOn: config.dependsOn,
      count: config.count,
      lifecycle: config.lifecycle
    });
    this._optMap = config.optMap;
    this._reqMap = config.reqMap;
    this._computedMap = config.computedMap;
  }

  // ==========
  // ATTRIBUTES
  // ==========

  // optMap - computed: false, optional: true, required: false
  private _optMap?: { [key: string]: string }; 
  public get optMap() {
    return this.getStringMapAttribute('optMap');
  }
  public set optMap(value: { [key: string]: string }) {
    this._optMap = value;
  }
  public resetOptMap() {
    this._optMap = undefined;
  }
  // Temporarily expose input value. Use with caution.
  public get optMapInput() {
    return this._optMap;
  }

  // reqMap - computed: false, optional: false, required: true
  private _reqMap?: { [key: string]: (boolean | cdktf.IResolvable) }; 
  public get reqMap() {
    return this.getBooleanMapAttribute('reqMap');
  }
  public set reqMap(value: { [key: string]: (boolean | cdktf.IResolvable) }) {
    this._reqMap = value;
  }
  // Temporarily expose input value. Use with caution.
  public get reqMapInput() {
    return this._reqMap;
  }

  // computedMap - computed: true, optional: true, required: false
  private _computedMap?: { [key: string]: number }; 
  public get computedMap() {
    return this.getNumberMapAttribute('computedMap');
  }
  public set computedMap(value: { [key: string]: number }) {
    this._computedMap = value;
  }
  public resetComputedMap() {
    this._computedMap = undefined;
  }
  // Temporarily expose input value. Use with caution.
  public get computedMapInput() {
    return this._computedMap;
  }

  // =========
  // SYNTHESIS
  // =========

  protected synthesizeAttributes(): { [name: string]: any } {
    return {
      optMap: cdktf.hashMapper(cdktf.stringToTerraform)(this._optMap),
      reqMap: cdktf.hashMapper(cdktf.booleanToTerraform)(this._reqMap),
      computedMap: cdktf.hashMapper(cdktf.numberToTerraform)(this._computedMap),
    };
  }
}
"
`;

exports[`Edge Provider Schema compiles to Typescript: optional-attribute-resource.ts 1`] = `
"// https://www.terraform.io/docs/providers/edge/r/optional_attribute_resource
// generated from terraform resource schema

import { Construct } from 'constructs';
import * as cdktf from 'cdktf';

// Configuration

export interface OptionalAttributeResourceConfig extends cdktf.TerraformMetaArguments {
  /**
  * Docs at Terraform Registry: {@link https://www.terraform.io/docs/providers/edge/r/optional_attribute_resource#str OptionalAttributeResource#str}
  */
  readonly str?: string;
  /**
  * Docs at Terraform Registry: {@link https://www.terraform.io/docs/providers/edge/r/optional_attribute_resource#num OptionalAttributeResource#num}
  */
  readonly num?: number;
  /**
  * Docs at Terraform Registry: {@link https://www.terraform.io/docs/providers/edge/r/optional_attribute_resource#bool OptionalAttributeResource#bool}
  */
  readonly bool?: boolean | cdktf.IResolvable;
  /**
  * Docs at Terraform Registry: {@link https://www.terraform.io/docs/providers/edge/r/optional_attribute_resource#strList OptionalAttributeResource#strList}
  */
  readonly strList?: string[];
  /**
  * Docs at Terraform Registry: {@link https://www.terraform.io/docs/providers/edge/r/optional_attribute_resource#numList OptionalAttributeResource#numList}
  */
  readonly numList?: number[];
  /**
  * Docs at Terraform Registry: {@link https://www.terraform.io/docs/providers/edge/r/optional_attribute_resource#boolList OptionalAttributeResource#boolList}
  */
  readonly boolList?: Array<boolean | cdktf.IResolvable> | cdktf.IResolvable;
}

/**
* Represents a {@link https://www.terraform.io/docs/providers/edge/r/optional_attribute_resource optional_attribute_resource}
*/
export class OptionalAttributeResource extends cdktf.TerraformResource {

  // =================
  // STATIC PROPERTIES
  // =================
  public static readonly tfResourceType: string = \\"optional_attribute_resource\\";

  // ===========
  // INITIALIZER
  // ===========

  /**
  * Create a new {@link https://www.terraform.io/docs/providers/edge/r/optional_attribute_resource optional_attribute_resource} Resource
  *
  * @param scope The scope in which to define this construct
  * @param id The scoped construct ID. Must be unique amongst siblings in the same scope
  * @param options OptionalAttributeResourceConfig = {}
  */
  public constructor(scope: Construct, id: string, config: OptionalAttributeResourceConfig = {}) {
    super(scope, id, {
      terraformResourceType: 'optional_attribute_resource',
      terraformGeneratorMetadata: {
        providerName: 'edge'
      },
      provider: config.provider,
      dependsOn: config.dependsOn,
      count: config.count,
      lifecycle: config.lifecycle
    });
    this._str = config.str;
    this._num = config.num;
    this._bool = config.bool;
    this._strList = config.strList;
    this._numList = config.numList;
    this._boolList = config.boolList;
  }

  // ==========
  // ATTRIBUTES
  // ==========

  // str - computed: false, optional: true, required: false
  private _str?: string; 
  public get str() {
    return this.getStringAttribute('str');
  }
  public set str(value: string) {
    this._str = value;
  }
  public resetStr() {
    this._str = undefined;
  }
  // Temporarily expose input value. Use with caution.
  public get strInput() {
    return this._str;
  }

  // num - computed: false, optional: true, required: false
  private _num?: number; 
  public get num() {
    return this.getNumberAttribute('num');
  }
  public set num(value: number) {
    this._num = value;
  }
  public resetNum() {
    this._num = undefined;
  }
  // Temporarily expose input value. Use with caution.
  public get numInput() {
    return this._num;
  }

  // bool - computed: false, optional: true, required: false
  private _bool?: boolean | cdktf.IResolvable; 
  public get bool() {
    return this.getBooleanAttribute('bool');
  }
  public set bool(value: boolean | cdktf.IResolvable) {
    this._bool = value;
  }
  public resetBool() {
    this._bool = undefined;
  }
  // Temporarily expose input value. Use with caution.
  public get boolInput() {
    return this._bool;
  }

  // strList - computed: false, optional: true, required: false
  private _strList?: string[]; 
  public get strList() {
    return this.getListAttribute('strList');
  }
  public set strList(value: string[]) {
    this._strList = value;
  }
  public resetStrList() {
    this._strList = undefined;
  }
  // Temporarily expose input value. Use with caution.
  public get strListInput() {
    return this._strList;
  }

  // numList - computed: false, optional: true, required: false
  private _numList?: number[]; 
  public get numList() {
    return this.getNumberListAttribute('numList');
  }
  public set numList(value: number[]) {
    this._numList = value;
  }
  public resetNumList() {
    this._numList = undefined;
  }
  // Temporarily expose input value. Use with caution.
  public get numListInput() {
    return this._numList;
  }

  // boolList - computed: false, optional: true, required: false
  private _boolList?: Array<boolean | cdktf.IResolvable> | cdktf.IResolvable; 
  public get boolList() {
    // Getting the computed value is not yet implemented
    return this.interpolationForAttribute('boolList');
  }
  public set boolList(value: Array<boolean | cdktf.IResolvable> | cdktf.IResolvable) {
    this._boolList = value;
  }
  public resetBoolList() {
    this._boolList = undefined;
  }
  // Temporarily expose input value. Use with caution.
  public get boolListInput() {
    return this._boolList;
  }

  // =========
  // SYNTHESIS
  // =========

  protected synthesizeAttributes(): { [name: string]: any } {
    return {
      str: cdktf.stringToTerraform(this._str),
      num: cdktf.numberToTerraform(this._num),
      bool: cdktf.booleanToTerraform(this._bool),
      strList: cdktf.listMapper(cdktf.stringToTerraform)(this._strList),
      numList: cdktf.listMapper(cdktf.numberToTerraform)(this._numList),
      boolList: cdktf.listMapper(cdktf.booleanToTerraform)(this._boolList),
    };
  }
}
"
`;

exports[`Edge Provider Schema compiles to Typescript: optional-computed-attribute-resource.ts 1`] = `
"// https://www.terraform.io/docs/providers/edge/r/optional_computed_attribute_resource
// generated from terraform resource schema

import { Construct } from 'constructs';
import * as cdktf from 'cdktf';

// Configuration

export interface OptionalComputedAttributeResourceConfig extends cdktf.TerraformMetaArguments {
  /**
  * Docs at Terraform Registry: {@link https://www.terraform.io/docs/providers/edge/r/optional_computed_attribute_resource#str OptionalComputedAttributeResource#str}
  */
  readonly str?: string;
  /**
  * Docs at Terraform Registry: {@link https://www.terraform.io/docs/providers/edge/r/optional_computed_attribute_resource#num OptionalComputedAttributeResource#num}
  */
  readonly num?: number;
  /**
  * Docs at Terraform Registry: {@link https://www.terraform.io/docs/providers/edge/r/optional_computed_attribute_resource#bool OptionalComputedAttributeResource#bool}
  */
  readonly bool?: boolean | cdktf.IResolvable;
  /**
  * Docs at Terraform Registry: {@link https://www.terraform.io/docs/providers/edge/r/optional_computed_attribute_resource#strList OptionalComputedAttributeResource#strList}
  */
  readonly strList?: string[];
  /**
  * Docs at Terraform Registry: {@link https://www.terraform.io/docs/providers/edge/r/optional_computed_attribute_resource#numList OptionalComputedAttributeResource#numList}
  */
  readonly numList?: number[];
  /**
  * Docs at Terraform Registry: {@link https://www.terraform.io/docs/providers/edge/r/optional_computed_attribute_resource#boolList OptionalComputedAttributeResource#boolList}
  */
  readonly boolList?: Array<boolean | cdktf.IResolvable> | cdktf.IResolvable;
}

/**
* Represents a {@link https://www.terraform.io/docs/providers/edge/r/optional_computed_attribute_resource optional_computed_attribute_resource}
*/
export class OptionalComputedAttributeResource extends cdktf.TerraformResource {

  // =================
  // STATIC PROPERTIES
  // =================
  public static readonly tfResourceType: string = \\"optional_computed_attribute_resource\\";

  // ===========
  // INITIALIZER
  // ===========

  /**
  * Create a new {@link https://www.terraform.io/docs/providers/edge/r/optional_computed_attribute_resource optional_computed_attribute_resource} Resource
  *
  * @param scope The scope in which to define this construct
  * @param id The scoped construct ID. Must be unique amongst siblings in the same scope
  * @param options OptionalComputedAttributeResourceConfig = {}
  */
  public constructor(scope: Construct, id: string, config: OptionalComputedAttributeResourceConfig = {}) {
    super(scope, id, {
      terraformResourceType: 'optional_computed_attribute_resource',
      terraformGeneratorMetadata: {
        providerName: 'edge'
      },
      provider: config.provider,
      dependsOn: config.dependsOn,
      count: config.count,
      lifecycle: config.lifecycle
    });
    this._str = config.str;
    this._num = config.num;
    this._bool = config.bool;
    this._strList = config.strList;
    this._numList = config.numList;
    this._boolList = config.boolList;
  }

  // ==========
  // ATTRIBUTES
  // ==========

  // str - computed: true, optional: true, required: false
  private _str?: string; 
  public get str() {
    return this.getStringAttribute('str');
  }
  public set str(value: string) {
    this._str = value;
  }
  public resetStr() {
    this._str = undefined;
  }
  // Temporarily expose input value. Use with caution.
  public get strInput() {
    return this._str;
  }

  // num - computed: true, optional: true, required: false
  private _num?: number; 
  public get num() {
    return this.getNumberAttribute('num');
  }
  public set num(value: number) {
    this._num = value;
  }
  public resetNum() {
    this._num = undefined;
  }
  // Temporarily expose input value. Use with caution.
  public get numInput() {
    return this._num;
  }

  // bool - computed: true, optional: true, required: false
  private _bool?: boolean | cdktf.IResolvable; 
  public get bool() {
    return this.getBooleanAttribute('bool');
  }
  public set bool(value: boolean | cdktf.IResolvable) {
    this._bool = value;
  }
  public resetBool() {
    this._bool = undefined;
  }
  // Temporarily expose input value. Use with caution.
  public get boolInput() {
    return this._bool;
  }

  // strList - computed: true, optional: true, required: false
  private _strList?: string[]; 
  public get strList() {
    return this.getListAttribute('strList');
  }
  public set strList(value: string[]) {
    this._strList = value;
  }
  public resetStrList() {
    this._strList = undefined;
  }
  // Temporarily expose input value. Use with caution.
  public get strListInput() {
    return this._strList;
  }

  // numList - computed: true, optional: true, required: false
  private _numList?: number[]; 
  public get numList() {
    return this.getNumberListAttribute('numList');
  }
  public set numList(value: number[]) {
    this._numList = value;
  }
  public resetNumList() {
    this._numList = undefined;
  }
  // Temporarily expose input value. Use with caution.
  public get numListInput() {
    return this._numList;
  }

  // boolList - computed: true, optional: true, required: false
  private _boolList?: Array<boolean | cdktf.IResolvable> | cdktf.IResolvable; 
  public get boolList() {
    // Getting the computed value is not yet implemented
    return this.interpolationForAttribute('boolList');
  }
  public set boolList(value: Array<boolean | cdktf.IResolvable> | cdktf.IResolvable) {
    this._boolList = value;
  }
  public resetBoolList() {
    this._boolList = undefined;
  }
  // Temporarily expose input value. Use with caution.
  public get boolListInput() {
    return this._boolList;
  }

  // =========
  // SYNTHESIS
  // =========

  protected synthesizeAttributes(): { [name: string]: any } {
    return {
      str: cdktf.stringToTerraform(this._str),
      num: cdktf.numberToTerraform(this._num),
      bool: cdktf.booleanToTerraform(this._bool),
      strList: cdktf.listMapper(cdktf.stringToTerraform)(this._strList),
      numList: cdktf.listMapper(cdktf.numberToTerraform)(this._numList),
      boolList: cdktf.listMapper(cdktf.booleanToTerraform)(this._boolList),
    };
  }
}
"
`;

exports[`Edge Provider Schema compiles to Typescript: required-attribute-resource.ts 1`] = `
"// https://www.terraform.io/docs/providers/edge/r/required_attribute_resource
// generated from terraform resource schema

import { Construct } from 'constructs';
import * as cdktf from 'cdktf';

// Configuration

export interface RequiredAttributeResourceConfig extends cdktf.TerraformMetaArguments {
  /**
  * Docs at Terraform Registry: {@link https://www.terraform.io/docs/providers/edge/r/required_attribute_resource#str RequiredAttributeResource#str}
  */
  readonly str: string;
  /**
  * Docs at Terraform Registry: {@link https://www.terraform.io/docs/providers/edge/r/required_attribute_resource#num RequiredAttributeResource#num}
  */
  readonly num: number;
  /**
  * Docs at Terraform Registry: {@link https://www.terraform.io/docs/providers/edge/r/required_attribute_resource#bool RequiredAttributeResource#bool}
  */
  readonly bool: boolean | cdktf.IResolvable;
  /**
  * Docs at Terraform Registry: {@link https://www.terraform.io/docs/providers/edge/r/required_attribute_resource#strList RequiredAttributeResource#strList}
  */
  readonly strList: string[];
  /**
  * Docs at Terraform Registry: {@link https://www.terraform.io/docs/providers/edge/r/required_attribute_resource#numList RequiredAttributeResource#numList}
  */
  readonly numList: number[];
  /**
  * Docs at Terraform Registry: {@link https://www.terraform.io/docs/providers/edge/r/required_attribute_resource#boolList RequiredAttributeResource#boolList}
  */
  readonly boolList: Array<boolean | cdktf.IResolvable> | cdktf.IResolvable;
}

/**
* Represents a {@link https://www.terraform.io/docs/providers/edge/r/required_attribute_resource required_attribute_resource}
*/
export class RequiredAttributeResource extends cdktf.TerraformResource {

  // =================
  // STATIC PROPERTIES
  // =================
  public static readonly tfResourceType: string = \\"required_attribute_resource\\";

  // ===========
  // INITIALIZER
  // ===========

  /**
  * Create a new {@link https://www.terraform.io/docs/providers/edge/r/required_attribute_resource required_attribute_resource} Resource
  *
  * @param scope The scope in which to define this construct
  * @param id The scoped construct ID. Must be unique amongst siblings in the same scope
  * @param options RequiredAttributeResourceConfig
  */
  public constructor(scope: Construct, id: string, config: RequiredAttributeResourceConfig) {
    super(scope, id, {
      terraformResourceType: 'required_attribute_resource',
      terraformGeneratorMetadata: {
        providerName: 'edge'
      },
      provider: config.provider,
      dependsOn: config.dependsOn,
      count: config.count,
      lifecycle: config.lifecycle
    });
    this._str = config.str;
    this._num = config.num;
    this._bool = config.bool;
    this._strList = config.strList;
    this._numList = config.numList;
    this._boolList = config.boolList;
  }

  // ==========
  // ATTRIBUTES
  // ==========

  // str - computed: false, optional: false, required: true
  private _str?: string; 
  public get str() {
    return this.getStringAttribute('str');
  }
  public set str(value: string) {
    this._str = value;
  }
  // Temporarily expose input value. Use with caution.
  public get strInput() {
    return this._str;
  }

  // num - computed: false, optional: false, required: true
  private _num?: number; 
  public get num() {
    return this.getNumberAttribute('num');
  }
  public set num(value: number) {
    this._num = value;
  }
  // Temporarily expose input value. Use with caution.
  public get numInput() {
    return this._num;
  }

  // bool - computed: false, optional: false, required: true
  private _bool?: boolean | cdktf.IResolvable; 
  public get bool() {
    return this.getBooleanAttribute('bool');
  }
  public set bool(value: boolean | cdktf.IResolvable) {
    this._bool = value;
  }
  // Temporarily expose input value. Use with caution.
  public get boolInput() {
    return this._bool;
  }

  // strList - computed: false, optional: false, required: true
  private _strList?: string[]; 
  public get strList() {
    return this.getListAttribute('strList');
  }
  public set strList(value: string[]) {
    this._strList = value;
  }
  // Temporarily expose input value. Use with caution.
  public get strListInput() {
    return this._strList;
  }

  // numList - computed: false, optional: false, required: true
  private _numList?: number[]; 
  public get numList() {
    return this.getNumberListAttribute('numList');
  }
  public set numList(value: number[]) {
    this._numList = value;
  }
  // Temporarily expose input value. Use with caution.
  public get numListInput() {
    return this._numList;
  }

  // boolList - computed: false, optional: false, required: true
  private _boolList?: Array<boolean | cdktf.IResolvable> | cdktf.IResolvable; 
  public get boolList() {
    // Getting the computed value is not yet implemented
    return this.interpolationForAttribute('boolList');
  }
  public set boolList(value: Array<boolean | cdktf.IResolvable> | cdktf.IResolvable) {
    this._boolList = value;
  }
  // Temporarily expose input value. Use with caution.
  public get boolListInput() {
    return this._boolList;
  }

  // =========
  // SYNTHESIS
  // =========

  protected synthesizeAttributes(): { [name: string]: any } {
    return {
      str: cdktf.stringToTerraform(this._str),
      num: cdktf.numberToTerraform(this._num),
      bool: cdktf.booleanToTerraform(this._bool),
      strList: cdktf.listMapper(cdktf.stringToTerraform)(this._strList),
      numList: cdktf.listMapper(cdktf.numberToTerraform)(this._numList),
      boolList: cdktf.listMapper(cdktf.booleanToTerraform)(this._boolList),
    };
  }
}
"
`;

exports[`Edge Provider Schema compiles to Typescript: set-block-resource.ts 1`] = `
"// https://www.terraform.io/docs/providers/edge/r/set_block_resource
// generated from terraform resource schema

import { Construct } from 'constructs';
import * as cdktf from 'cdktf';

// Configuration

export interface SetBlockResourceConfig extends cdktf.TerraformMetaArguments {
  /**
  * set block
  * 
  * Docs at Terraform Registry: {@link https://www.terraform.io/docs/providers/edge/r/set_block_resource#set SetBlockResource#set}
  */
  readonly set?: SetBlockResourceSet[] | cdktf.IResolvable;
}
export interface SetBlockResourceSet {
  /**
  * Docs at Terraform Registry: {@link https://www.terraform.io/docs/providers/edge/r/set_block_resource#optstr SetBlockResource#optstr}
  */
  readonly optstr?: string;
  /**
  * Docs at Terraform Registry: {@link https://www.terraform.io/docs/providers/edge/r/set_block_resource#optnum SetBlockResource#optnum}
  */
  readonly optnum?: number;
  /**
  * Docs at Terraform Registry: {@link https://www.terraform.io/docs/providers/edge/r/set_block_resource#optbool SetBlockResource#optbool}
  */
  readonly optbool?: boolean | cdktf.IResolvable;
  /**
  * Docs at Terraform Registry: {@link https://www.terraform.io/docs/providers/edge/r/set_block_resource#reqstr SetBlockResource#reqstr}
  */
  readonly reqstr: string;
  /**
  * Docs at Terraform Registry: {@link https://www.terraform.io/docs/providers/edge/r/set_block_resource#reqnum SetBlockResource#reqnum}
  */
  readonly reqnum: number;
  /**
  * Docs at Terraform Registry: {@link https://www.terraform.io/docs/providers/edge/r/set_block_resource#reqbool SetBlockResource#reqbool}
  */
  readonly reqbool: boolean | cdktf.IResolvable;
  /**
  * Docs at Terraform Registry: {@link https://www.terraform.io/docs/providers/edge/r/set_block_resource#computedstr SetBlockResource#computedstr}
  */
  readonly computedstr?: string;
  /**
  * Docs at Terraform Registry: {@link https://www.terraform.io/docs/providers/edge/r/set_block_resource#computednum SetBlockResource#computednum}
  */
  readonly computednum?: number;
  /**
  * Docs at Terraform Registry: {@link https://www.terraform.io/docs/providers/edge/r/set_block_resource#computedbool SetBlockResource#computedbool}
  */
  readonly computedbool?: boolean | cdktf.IResolvable;
}

export function setBlockResourceSetToTerraform(struct?: SetBlockResourceSet | cdktf.IResolvable): any {
  if (!cdktf.canInspect(struct) || cdktf.Tokenization.isResolvable(struct)) { return struct; }
  if (cdktf.isComplexElement(struct)) {
    throw new Error(\\"A complex element was used as configuration, this is not supported: https://cdk.tf/complex-object-as-configuration\\");
  }
  return {
    optstr: cdktf.stringToTerraform(struct!.optstr),
    optnum: cdktf.numberToTerraform(struct!.optnum),
    optbool: cdktf.booleanToTerraform(struct!.optbool),
    reqstr: cdktf.stringToTerraform(struct!.reqstr),
    reqnum: cdktf.numberToTerraform(struct!.reqnum),
    reqbool: cdktf.booleanToTerraform(struct!.reqbool),
    computedstr: cdktf.stringToTerraform(struct!.computedstr),
    computednum: cdktf.numberToTerraform(struct!.computednum),
    computedbool: cdktf.booleanToTerraform(struct!.computedbool),
  }
}


/**
* Represents a {@link https://www.terraform.io/docs/providers/edge/r/set_block_resource set_block_resource}
*/
export class SetBlockResource extends cdktf.TerraformResource {

  // =================
  // STATIC PROPERTIES
  // =================
  public static readonly tfResourceType: string = \\"set_block_resource\\";

  // ===========
  // INITIALIZER
  // ===========

  /**
  * Create a new {@link https://www.terraform.io/docs/providers/edge/r/set_block_resource set_block_resource} Resource
  *
  * @param scope The scope in which to define this construct
  * @param id The scoped construct ID. Must be unique amongst siblings in the same scope
  * @param options SetBlockResourceConfig = {}
  */
  public constructor(scope: Construct, id: string, config: SetBlockResourceConfig = {}) {
    super(scope, id, {
      terraformResourceType: 'set_block_resource',
      terraformGeneratorMetadata: {
        providerName: 'edge'
      },
      provider: config.provider,
      dependsOn: config.dependsOn,
      count: config.count,
      lifecycle: config.lifecycle
    });
    this._set = config.set;
  }

  // ==========
  // ATTRIBUTES
  // ==========

  // set - computed: false, optional: true, required: false
  private _set?: SetBlockResourceSet[] | cdktf.IResolvable; 
  public get set() {
    // Getting the computed value is not yet implemented
    return cdktf.Token.asAny(cdktf.Fn.tolist(this.interpolationForAttribute('set')));
  }
  public set set(value: SetBlockResourceSet[] | cdktf.IResolvable) {
    this._set = value;
  }
  public resetSet() {
    this._set = undefined;
  }
  // Temporarily expose input value. Use with caution.
  public get setInput() {
    return this._set;
  }

  // =========
  // SYNTHESIS
  // =========

  protected synthesizeAttributes(): { [name: string]: any } {
    return {
      set: cdktf.listMapper(setBlockResourceSetToTerraform)(this._set),
    };
  }
}
"
`;
